// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render radio checked 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  position: relative;
  width: calc(0.75rem + 2 * (0.375rem + 1px));
  height: calc(0.75rem + 2 * (0.375rem + 1px));
  border-radius: 50%;
  padding: 0.375rem;
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.emotion-2 {
  box-sizing: border-box;
  width: 0.75rem;
  height: 0.75rem;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  transition: transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

<div>
  <div
    class="emotion-0"
    role="radio"
  >
    <div
      class="emotion-1"
      data-testid="pbl-radio"
    >
      <div
        class="emotion-2"
        data-testid="pbl-radio-handle"
      />
      <input
        checked=""
        class="emotion-3"
        data-testid="pbl-radio-input"
        id="custom-id"
        type="radio"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render radio unchecked 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  position: relative;
  width: calc(0.75rem + 2 * (0.375rem + 1px));
  height: calc(0.75rem + 2 * (0.375rem + 1px));
  border-radius: 50%;
  padding: 0.375rem;
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.emotion-2 {
  box-sizing: border-box;
  width: 0.75rem;
  height: 0.75rem;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  transition: transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

<div>
  <div
    class="emotion-0"
    role="radio"
  >
    <div
      class="emotion-1"
      data-testid="pbl-radio"
    >
      <div
        class="emotion-2"
        data-testid="pbl-radio-handle"
      />
      <input
        class="emotion-3"
        data-testid="pbl-radio-input"
        id="custom-id"
        type="radio"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render radio with label 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
  margin-left: 0.5rem;
}

<label
  class="emotion-0"
  data-testid="pbl-radio-label"
  for="custom-id"
>
  I am a 
  <strong>
    label
  </strong>
</label>
`;
